Added section: Documents i textos

--- a/web/bundles/ADG/css/comu.css
+++ b/web/bundles/ADG/css/comu.css
@@ -87,6 +87,10 @@ article {
 	padding-right: 10px;
 	padding-left: 10px;
 }
+.lessMarginBot{
+	margin-bottom:-1px;
+}
+
 
 /* Vertical spacers */
 .space50 {
