--- a/src/ADG/ArxiuBundle/Resources/views/Parroquies/parroquies.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Parroquies/parroquies.html.twig
@@ -46,7 +46,7 @@
 	<div class="row" style="margin-bottom: 5px;margin-left: 0px;margin-right: 0px">
 		<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
 			<div class="panel panel-default">
-				cercador per nodac, data, lloc i paraula clau
+				{% include 'ArxiuBundle:Parroquies:cerca.html.twig' %}
 			</div>
 		</div><!--/Cerca-->
 		
@@ -57,30 +57,26 @@
 					<table class="table table-striped table-bordered table-hover imprimir" id="parroquies_table">
 				        <thead>
 				            <tr>
-				                <th class="centered-text" id="idHeader" title="Tooltip!">{{ 'dispenses.taula.classificacio' | trans }}</th>
-				                <th class="centered-text">{{ 'dispenses.taula.any' | trans }}</th>
-				                <th class="centered-text">{{ 'dispenses.taula.manom' | trans }}</th>
-				                <th class="centered-text">{{ 'dispenses.taula.macog' | trans }}</th>
-				                <th class="centered-text">{{ 'dispenses.taula.munom' | trans }}</th>
-				                <th class="centered-text">{{ 'dispenses.taula.mucog' | trans }}</th>
-							    <th class="centered-text noimprimir">{{ 'dispenses.taula.operacions' | trans }}</th>            
+				                <th class="centered-text" id="idHeader" title="Tooltip!">Classificació</th>
+				                <th class="centered-text">Data</th>
+				                <th class="centered-text">Nom</th>
+				                <th class="centered-text">Titol</th>
+							    <th class="centered-text noimprimir">Operacions</th>            
 				            </tr>
 				        </thead>
 			            <tbody>
 			                {% for i in info %}
 			                    <tr>
 			                        <td style="min-width: 100px">{{ i.nodac }}</td>
-					                <td>{{ i.any }}</td>
-					                <td>{{ i.maritNom }}</td>
-					                <td>{{ i.maritCognom1 }}</td>
-					                <td>{{ i.mullerNom }}</td>
-					                <td>{{ i.mullerCognom1 }}</td>
+					                <td>{{ i.data }}</td>
+					                <td>{{ i.nom }}</td>
+					                <td>{{ i.titol }}</td>
 		                        	<td class="noimprimir">
-		                        		<a data-toggle="modal" href="{{  path('dispenses_detall', {'id':i.numref }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
+		                        		<a data-toggle="modal" href="{{  path('parroquies') }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
 		                        		
 			                			{% if is_granted('ROLE_ADMIN') %}
-			                        		<a data-toggle="modal" href="{{ path('dispenses') }}" data-target="#editarDispenses" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
-			                        		<a data-toggle="modal" href="{{path('dispenses') }}" data-target="#eliminarDispenses" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
+			                        		<a data-toggle="modal" href="{{ path('parroquies') }}" data-target="#editarDispenses" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
+			                        		<a data-toggle="modal" href="{{ path('parroquies') }}" data-target="#eliminarDispenses" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
 			                        	{% endif %}
 		                        	</td>
 			                    </tr>
