--- a/src/ADG/PrincipalBundle/Resources/views/Admin/general.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/Admin/general.html.twig
@@ -19,6 +19,19 @@
 					</a>
 				</div>
 			</div>
+			
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Usuaris</h3>
+				</div>
+				<div class="panel-body list-group">
+					<a href=" {{ path('admin_usuaris') }}" class="list-group-item">
+						<i class="icon-edit"></i>
+						Veure usuaris
+					</a>
+				</div>
+			</div>
+			
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">Fons i series</h3>
@@ -46,18 +59,54 @@
 					</a>
 				</div>
 			</div>
+			
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Dispenses matrimonials</h3>
+				</div>
+				<div class="panel-body list-group">
+					<a href=" {{ path('dispenses') }}" class="list-group-item">
+						<i class="icon-edit"></i>
+						Veure dispenses matrimonials
+					</a>
+				</div>
+			</div>
+			
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Index de llocs i persones</h3>
+				</div>
+				<div class="panel-body list-group">
+					<a href=" {{ path('llistat') }}" class="list-group-item">
+						<i class="icon-edit"></i>
+						Llistar llocs i persones
+					</a>
+				</div>
+			</div>
 
 		</div>
 		
 		<div class="col-lg-4 col-md-6 col-sm-6">
 			<div class="panel panel-default">
 				<div class="panel-heading">
-					<h3 class="panel-title">Usuaris</h3>
+					<h3 class="panel-title">Documents i textos</h3>
 				</div>
 				<div class="panel-body list-group">
-					<a href=" {{ path('admin_usuaris') }}" class="list-group-item">
+					<a href=" {{ path('documents') }}" class="list-group-item">
 						<i class="icon-edit"></i>
-						Veure usuaris
+						Modificar documents i textos
+					</a>
+				</div>
+			</div>
+			
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h3 class="panel-title">Parròquies</h3>
+				</div>
+				<div class="panel-body list-group">
+					<a href=" {{ path('parroquies') }}" class="list-group-item">
+						<i class="icon-edit"></i>
+						Modificar parròquies
 					</a>
 				</div>
 			</div>
