--- a/src/ADG/ArxiuBundle/Resources/views/Parroquies/parroquies.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Parroquies/parroquies.html.twig
@@ -1,99 +1,88 @@
 {% extends 'ArxiuBundle::base-arxiu.html.twig' %}
 
-{% block title %}Parròquies{% endblock %}
-
-{% block stylesheets %}
-	{{ parent() }}
-	<link href="{{ asset('bundles/adg/css/dataTables.bootstrap.css') }}" rel="stylesheet"> 	
-{% endblock %}
+{% block title %}{{ 'parroquies.titol' | trans }}{% endblock %}
 
 {% block javascripts %}
 	{{ parent() }}
 	
     <script>   
-		$(document).ready(function() {
-			$('#parroquies_table').dataTable({
-	                "sDom": "<'col-xs-4'l> <'col-xs-offset-1'f> rt <'col-xs-4'i><'col-xs-offset-1'p>",
-	                "language": {
-	        			"sLengthMenu": "{{ 'general.datatable.entrades' | trans }}",
-	        			"sZeroRecords": "{{ 'general.datatable.zero' | trans }}",
-	        			"sInfo": "{{ 'general.datatable.info' | trans }}",
-	        			"sInfoEmpty": "{{ 'general.datatable.empty' | trans }}",
-	        			"sInfoFiltered": "{{ 'general.datatable.filtrades' | trans }}",
-	        			"oPaginate": {
-	        		        "sNext": "{{ 'general.datatable.seguent' | trans }}",
-	        		        "sPrevious": "{{ 'general.datatable.anterior' | trans }}"
-	        		      },
-	        			"sSearch": "{{ 'general.datatable.general' | trans }}: "
-	                }
-	        })
-		} );
-	
 		$(document).on('hidden.bs.modal', function (e) {
 		    $(e.target).removeData('bs.modal');
 		});
 	</script>
-
-    <script src="{{ asset('bundles/ADG/js/jquery.dataTables.js') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/ADG/js/dataTables.bootstrap.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block body %}
 	<div class="page-header">
-        <h1>Parròquies</h1>
-	</div>	
+        <h1>{{ 'parroquies.titol' | trans }}</h1>
+	</div>
+		<div class="row" style="margin-bottom: 5px;margin-left: 15px;margin-right: 0px">
+		<div class="btn-group" style="margin-top:5px;margin-bottom:5px;">
+			<a type="button" class="btn {% if seleccio is sameas("parroquies") %}btn-primary{% else %}btn-default{% endif %}" 
+					style="margin-bottom:-1px;" href="{{ path('parroquies') }}" >
+				 	{{ 'parroquies.cercar1' | trans }}
+			</a>
+		</div>
+		
+		<div class="btn-group" style="margin-top:5px;margin-bottom:5px;">
+			<a type="button" class="btn {% if seleccio is sameas("arxius") %}btn-primary{% else %}btn-default{% endif %}" 
+					style="margin-bottom:-1px;" href="{{ path('parroquies_arxius') }}" >
+				 	{{ 'parroquies.cercar2' | trans }}
+			</a>
+		</div>
+	</div>
+	<div class="space10"></div>
+		
 	
 	<div class="row" style="margin-bottom: 5px;margin-left: 0px;margin-right: 0px">
-		<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+		<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
 			<div class="panel panel-default">
 				{% include 'ArxiuBundle:Parroquies:cerca.html.twig' %}
 			</div>
 		</div><!--/Cerca-->
 		
-		<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 table-responsive">
-			{% if info is not null %}
-					<!-- taula dispenes -->
-					<div class="row" >
-					<table class="table table-striped table-bordered table-hover imprimir" id="parroquies_table">
-				        <thead>
-				            <tr>
-				                <th class="centered-text" id="idHeader" title="Tooltip!">Classificació</th>
-				                <th class="centered-text">Data</th>
-				                <th class="centered-text">Nom</th>
-				                <th class="centered-text">Titol</th>
-							    <th class="centered-text noimprimir">Operacions</th>            
-				            </tr>
-				        </thead>
-			            <tbody>
-			                {% for i in info %}
-			                    <tr>
-			                        <td style="min-width: 100px">{{ i.nodac }}</td>
-					                <td>{{ i.data }}</td>
-					                <td>{{ i.nom }}</td>
-					                <td>{{ i.titol }}</td>
-		                        	<td class="noimprimir">
-		                        		<a data-toggle="modal" href="{{  path('parroquies_detall', {'id':i.id }) }}" data-target="#ampliarInfo" class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
-		                        		
-			                			{% if is_granted('ROLE_ADMIN') %}
-			                        		<a data-toggle="modal" href="{{ path('parroquies') }}" data-target="#editarDispenses" class="btn btn-xs btn-primary" type="button"><i class="icon-pencil"></i></a>
-			                        		<a data-toggle="modal" href="{{ path('parroquies') }}" data-target="#eliminarDispenses" class="btn btn-xs btn-danger" type="button"><i class="icon-remove"></i></a>
-			                        	{% endif %}
-		                        	</td>
-			                    </tr>
-			                 
-			                {% endfor %}
-			            </tbody>
-			            
-			        </table>
-			        </div>
-			        <div class="row">
-			        	<button style="float: right;" class="btn btn-default" onclick="imprimir('#parroquies_table')" ><i class="icon-print"></i></button>
-			        </div>	
-			{% else %}
-				<div class="alert alert-info" >
-					{{ 'dispenses.alerta' | trans }}
+		<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+			{% if info is not null and info is not empty %}
+				<div class="panel panel-info">
+				  <div class="panel-heading">
+				    <h3 class="panel-title">{{ 'parroquies.resultats' | trans }}</h3>
+				  </div>
+				  <div class="panel-body">
+				  	<div class="imprimir" id="parroquies">
+				  		{% for i in info %}
+							<h4>{{ i.nom }}</h4>
+							<p>{{ i.descripcio }}</p>
+						    <div class="row noimprimir">
+						    	<div class="btn-group" style="margin-left:15px;">
+					              	<a data-toggle="modal" href="{{ path('parroquies_detall', {'id': i.id }) }}" data-target="#ampliarInfo"  class="btn btn-sm btn-info" type="button"><i class="icon-info"></i></a>
+					            </div>
+					              	
+						    	{% if is_granted('ROLE_ADMIN') %}     
+					              	<div class="btn-group" style="margin-right:15px;float:right;">
+					              		<a data-toggle="modal" href="{{ path('parroquies_editar', {'id': i.id }) }}" data-target="#editarParroquies" class="btn btn-sm btn-primary" type="button"><i class="icon-pencil"></i></a>
+					              		<a data-toggle="modal" href="{{ path('parroquies_eliminar', { 'id': i.id }) }}" data-target="#eliminarParroquies" class="btn btn-sm btn-danger" type="button"><i class="icon-remove"></i></a>
+					              	</div>
+				              	{% endif %}
+							</div>
+					 		
+							<div class="space10" style="border-bottom: 1px solid #eeeeee;"></div>
+				    	{% endfor %}
+					</div>
+					<div class="space10"></div>
+				    <div class="row" style="padding-right: 10px;">
+						<button style="float: right;" class="btn btn-default" onclick="imprimir('#parroquies')" ><i class="icon-print"></i></button>
+					</div>
+				  </div><!-- /.panel-body -->
 				</div>
-			{% endif %}	
+			{% elseif info is not null and info is empty %}
+				<div class="alert alert-warning" style="margin-top:10px">
+					{{ 'documents.alerta3' | trans }}
+				</div>   
+			{% else %}
+		    	<div class="alert alert-info" style="margin-top:10px">
+					{{ 'documents.alerta' | trans }}
+				</div>   
+			{% endif %}
 		</div><!--/taula -->
 	</div>
 	
