Added admin side to Parroquies

--- a/src/ADG/ArxiuBundle/Resources/views/Parroquies/cercaArxius.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Parroquies/cercaArxius.html.twig
@@ -37,7 +37,7 @@
 		</div>
 		{% if is_granted('ROLE_ADMIN') %}
 			<div class="btn-group">	
-				<a data-toggle="modal" href="{{ path('parroquies_arxius') }}" data-target="#nouParroquies" class="btn btn-success" type="button"><i class="icon-plus"></i>&nbsp;Afegir nou</a>
+				<a data-toggle="modal" href="{{ path('parroquies_arxius_nou') }}" data-target="#nouParroquies" class="btn btn-success" type="button"><i class="icon-plus"></i>&nbsp;Afegir nou</a>
 		    </div>
 		{% endif %}
 
