--- a/src/ADG/PrincipalBundle/Resources/views/AdminParroquies/editarArxius.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminParroquies/editarArxius.html.twig
@@ -2,7 +2,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Afegir nou</h4>
+          <h4 class="modal-title">Modificar - </h4>
         </div>
       <form action="{{ path("parroquies_arxius_editar_confirmar") }}" method="post">
 	      	<div class="modal-body"> 
