Improved Fons new options

--- a/src/ADG/ArxiuBundle/Resources/views/Fons/menuLateral.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Fons/menuLateral.html.twig
@@ -24,7 +24,7 @@
 			      <a class="list-group-item lateral{% if seleccio is sameas("manuals") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'manuals' }) }}">{{ 'fons.manuals.manuals' | trans }}</a>
 			      <a class="list-group-item lateral{% if seleccio is sameas("beneficis") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'beneficis' }) }}">{{ 'fons.manuals.beneficis' | trans }}</a>
 			      <a class="list-group-item lateral{% if seleccio is sameas("seu") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'seu' }) }}">{{ 'fons.manuals.seu' | trans }}</a>
-			      <a class="list-group-item lateral{% if seleccio is sameas("patronat") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'patronat' }) }}">{{ 'fons.manuals.patronat' | trans }}Processos sobre dret de patronat</a>
+			      <a class="list-group-item lateral{% if seleccio is sameas("patronat") %} active{% endif %}" href="{{ path('fons_select', { 'seleccio': 'patronat' }) }}">{{ 'fons.manuals.patronat' | trans }}</a>
 			    </ul>
 			</div><!--/Manuals-->
 			
