Added admin to Dispenses

--- a/src/ADG/ArxiuBundle/Resources/views/Dispenses/cercaDispenses.html.twig
+++ b/src/ADG/ArxiuBundle/Resources/views/Dispenses/cercaDispenses.html.twig
@@ -138,7 +138,7 @@
 		</div>
 		{% if is_granted('ROLE_ADMIN') %}
 			<div class="btn-group">	
-				<a data-toggle="modal" href="{{ path('dispenses') }}" data-target="#nouDispenses" class="btn btn-success" type="button"><i class="icon-plus"></i>&nbsp;Afegir nou</a>
+				<a data-toggle="modal" href="{{ path('dispenses_nou') }}" data-target="#nouDispenses" class="btn btn-success" type="button"><i class="icon-plus"></i>&nbsp;Afegir nou</a>
 		    </div>
 		{% endif %}
 
