--- a/src/ADG/PrincipalBundle/Resources/views/AdminLlistat/eliminar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminLlistat/eliminar.html.twig
@@ -12,7 +12,7 @@
 	      		<input type="hidden" name="num" value="{{ info.num }}">
 	      		<input type="hidden" name="tipus" value="{{ tipus }}">
 				<h5 style="color: #d9534f">Classificació de l'arxiu</h5><p>{{ info.nodac }}</p>
-				<h5 style="color: #d9534f">Nóm de {{ tipus }}</h5><p>{{ info.nom }}</p>
+				<h5 style="color: #d9534f">Nom de {{ tipus }}</h5><p>{{ info.nom }}</p>
 			 		
 	        </div>
 	        <div class="modal-footer">
