--- a/src/ADG/PrincipalBundle/Resources/views/AdminDispenses/nou.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminDispenses/nou.html.twig
@@ -22,6 +22,12 @@
 						<input type="text" class="form-control" name="inputData" pattern="{{ patro }}"
 						title="La data ha de tenir el format &quot;1650 juliol 9&quot; o bé &quot;1650&quot;" required>
 				</div><div class="space10"></div>
+				
+				<select class="form-control" name="inputControl" style="max-width: 220px">
+						<option value="proclames">Dispensa de proclames</option>
+	                	<option value="impediment">Dispensa d'impediment</option>
+				</select><div class="space10"></div>
+				
 				<div class="input-group">
 						<span class="input-group-addon">Any</span>
 						<input type="text" class="form-control" name="inputAny">
@@ -29,10 +35,6 @@
 				<div class="input-group">
 						<span class="input-group-addon">Tipus</span>
 						<input type="text" class="form-control" name="inputTipus">
-				</div><div class="space10"></div>
-				<div class="input-group">
-						<span class="input-group-addon">Control</span>
-						<input type="text" class="form-control" name="inputControl">
 				</div><div class="space10"></div>
 				<div class="input-group">
 						<span class="input-group-addon">Document</span>
