--- a/src/ADG/PrincipalBundle/Resources/views/AdminDispenses/eliminar.html.twig
+++ b/src/ADG/PrincipalBundle/Resources/views/AdminDispenses/eliminar.html.twig
@@ -2,7 +2,10 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title text-danger">Eliminar dispensa matrimonial
+          <h4 class="modal-title text-danger">Eliminar dispensa 
+          	{% if info.control is not null and info.control is not empty %} d'impediment
+          	{% else %} de proclames
+          	{% endif %}
           </h4>
         </div>
       <form action="{{ path("dispenses_eliminar_confirmar") }}" method="post">
@@ -15,7 +18,6 @@
 				<h5 style="color: #d9534f">Data</h5><p>{{ info.data }}</p>
 				<h5 style="color: #d9534f">Any</h5><p>{{ info.any }}</p>
 				<h5 style="color: #d9534f">Tipus</h5><p>{{ info.tipus }}</p>
-				<h5 style="color: #d9534f">Control</h5><p>{{ info.control }}</p>
 				<h5 style="color: #d9534f">Document</h5><p>{{ info.document }}</p>
 				
 				<h4>Informació marit</h4>
